@@ -2,6 +2,7 @@
 
 	- -Wall warnings
 	- -pedantic warnings
+	- TnyCamelSendQueue should not error if the TnyDevice went offline
 
 2007-10-03  Jose Dapena Paz  <jdapena@igalia.com>
 
